Refactor/group test (#254)
* nitpick

* Added validation to group dto

* Added controller web test

* Added service unit and integration test

* Deleted unused code